--- a/books/Storyboards/SearchOnline.storyboard
+++ b/books/Storyboards/SearchOnline.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="o9x-cb-ys2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="o9x-cb-ys2">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,7 +32,7 @@
             </objects>
             <point key="canvasLocation" x="-2207" y="-91"/>
         </scene>
-        <!--Search Books-->
+        <!--Search Online-->
         <scene sceneID="X5e-4E-ore">
             <objects>
                 <viewController id="coT-wT-mpQ" customClass="SearchOnline" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
@@ -109,7 +109,7 @@
                             <constraint firstAttribute="trailing" secondItem="jHg-wa-mMg" secondAttribute="trailing" id="nbo-Af-fF9"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Search Books" id="bXy-YI-GNG">
+                    <navigationItem key="navigationItem" title="Search Online" id="bXy-YI-GNG">
                         <barButtonItem key="backBarButtonItem" title="Search" id="vlr-QU-fXh"/>
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="miL-NO-6pf">
                             <connections>
