--- a/books/Storyboards/EditBook~.storyboard
+++ b/books/Storyboards/EditBook~.storyboard
@@ -283,7 +283,7 @@
                         <outlet property="shareButton" destination="Idg-AT-4fK" id="vxR-7M-Bx2"/>
                         <outlet property="subjectsLabel" destination="oBf-8E-wfa" id="mq8-dM-tQE"/>
                         <outlet property="titleLabel" destination="Bmm-uv-eym" id="VZf-aL-TzX"/>
-                        <segue destination="YqV-yZ-PX1" kind="presentation" identifier="editBookSegue" modalPresentationStyle="formSheet" id="iwk-dG-DAg"/>
+                        <segue destination="JWo-Zy-Tgk" kind="presentation" identifier="editBookSegue" modalPresentationStyle="formSheet" id="iwk-dG-DAg"/>
                         <segue destination="Xm0-BF-J0S" kind="presentation" identifier="editReadStateSegue" modalPresentationStyle="formSheet" id="Imq-lB-j8c"/>
                     </connections>
                 </viewController>
@@ -291,21 +291,102 @@
             </objects>
             <point key="canvasLocation" x="-4042.0289855072465" y="970.92391304347836"/>
         </scene>
+        <!--Edit Book-->
+        <scene sceneID="mM5-9V-UxP">
+            <objects>
+                <viewController id="WYW-BA-34q" customClass="EditBook" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xo3-kq-dYf"/>
+                        <viewControllerLayoutGuide type="bottom" id="3Ug-QF-jXU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="St1-rQ-6Ha">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Edit Book" id="S0b-op-glK">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="yhj-wT-iTJ">
+                            <connections>
+                                <action selector="cancelButtonWasPressed:" destination="WYW-BA-34q" id="vcX-Rg-tZ0"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="4HG-yh-hAC">
+                            <connections>
+                                <action selector="doneButtonWasPressed:" destination="WYW-BA-34q" id="I7J-9r-89A"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="doneButton" destination="4HG-yh-hAC" id="p2g-br-MlO"/>
+                        <segue destination="WQe-HV-kqI" kind="show" identifier="editSubjectsSegue" id="oon-bn-FaC"/>
+                        <segue destination="9Jc-71-fIL" kind="show" identifier="editAuthorSegue" id="gAN-c1-328"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lso-V8-voX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2289" y="1336"/>
+        </scene>
+        <!--Book Author Form-->
+        <scene sceneID="mas-Ao-a9m">
+            <objects>
+                <viewController id="9Jc-71-fIL" customClass="BookAuthorForm" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4p1-Cd-Kwr"/>
+                        <viewControllerLayoutGuide type="bottom" id="EK9-4i-9lN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vd6-Hx-jfJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sUU-xQ-XCw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1454" y="1164"/>
+        </scene>
+        <!--Book Subjects Form-->
+        <scene sceneID="2wP-G5-TFo">
+            <objects>
+                <viewController id="WQe-HV-kqI" customClass="BookSubjectsForm" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Gh-SP-NyI"/>
+                        <viewControllerLayoutGuide type="bottom" id="c41-1i-3Og"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hQB-uz-Pkf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zoo-ZQ-eOf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1458" y="1811"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="80d-7T-d57">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JWo-Zy-Tgk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iRV-6F-PTv">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WYW-BA-34q" kind="relationship" relationship="rootViewController" id="aCZ-5M-xzO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M4m-lY-rDX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3141" y="1335"/>
+        </scene>
         <!--EditReadState-->
         <scene sceneID="r4v-sf-CVq">
             <objects>
                 <viewControllerPlaceholder storyboardName="EditReadState" id="Xm0-BF-J0S" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WeM-gf-J6i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3121" y="752"/>
-        </scene>
-        <!--EditBook-->
-        <scene sceneID="eKJ-hr-mt6">
-            <objects>
-                <viewControllerPlaceholder storyboardName="EditBook" id="YqV-yZ-PX1" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ggw-ag-s2O" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-3121" y="1131"/>
+            <point key="canvasLocation" x="-3143" y="610"/>
         </scene>
     </scenes>
 </document>
