--- a/books/Storyboards/ScanBarcode.storyboard
+++ b/books/Storyboards/ScanBarcode.storyboard
@@ -92,10 +92,10 @@
             </objects>
             <point key="canvasLocation" x="-1471.2" y="-393.55322338830587"/>
         </scene>
-        <!--Nav With Read State-->
+        <!--Navigation Controller-->
         <scene sceneID="YJu-cP-9jM">
             <objects>
-                <navigationController id="rYQ-41-cfc" customClass="NavWithReadState" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="rYQ-41-cfc" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="rHe-eY-Zk8">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
