--- a/books/Storyboards/SearchBooksEmptyDataset.xib
+++ b/books/Storyboards/SearchBooksEmptyDataset.xib
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GillSans.ttc">
+            <string>GillSans</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SearchBooksEmptyDataset" customModule="Reading_List" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="219"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="353"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🔍 Search Books" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-oO-OTM">
-                    <rect key="frame" x="16" y="16" width="343" height="33.5"/>
+                    <rect key="frame" x="16" y="150" width="343" height="33.5"/>
                     <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="29"/>
                     <color key="textColor" red="0.2274509804" green="0.2274509804" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search books by title, author, ISBN - or a mixture!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDN-K1-ihI">
-                    <rect key="frame" x="16" y="72" width="343" height="41.5"/>
+                    <rect key="frame" x="16" y="206" width="343" height="41.5"/>
                     <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="18"/>
                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByGoogle" translatesAutoresizingMaskIntoConstraints="NO" id="Wvj-q8-JKE">
-                    <rect key="frame" x="115" y="181" width="144" height="18"/>
+                    <rect key="frame" x="115" y="315" width="144" height="18"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="MDN-K1-ihI" firstAttribute="leading" secondItem="l4p-oO-OTM" secondAttribute="leading" id="7bl-JS-XMA"/>
-                <constraint firstItem="l4p-oO-OTM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="IwK-lj-SCz"/>
-                <constraint firstAttribute="bottom" secondItem="Wvj-q8-JKE" secondAttribute="bottom" constant="20" id="N7O-Gs-xlm"/>
+                <constraint firstItem="l4p-oO-OTM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="150" id="IwK-lj-SCz"/>
                 <constraint firstItem="Wvj-q8-JKE" firstAttribute="top" secondItem="MDN-K1-ihI" secondAttribute="bottom" constant="68" id="TS2-Rh-LOM"/>
                 <constraint firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" constant="16" id="Zj0-Xg-9LS"/>
                 <constraint firstItem="l4p-oO-OTM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="bsc-rY-QOY"/>
                 <constraint firstItem="MDN-K1-ihI" firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" id="d6f-dn-6xt"/>
                 <constraint firstItem="Wvj-q8-JKE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="usY-Mw-96Q"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Wvj-q8-JKE" secondAttribute="bottom" constant="20" id="v9w-WP-GZl"/>
                 <constraint firstItem="MDN-K1-ihI" firstAttribute="top" secondItem="l4p-oO-OTM" secondAttribute="bottom" constant="22" id="xnN-hR-Ewp"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -47,7 +53,7 @@
                 <outlet property="descriptionLabel" destination="MDN-K1-ihI" id="Ywt-Re-giJ"/>
                 <outlet property="titleLabel" destination="l4p-oO-OTM" id="zc5-1n-OLO"/>
             </connections>
-            <point key="canvasLocation" x="-10.5" y="-134.5"/>
+            <point key="canvasLocation" x="-116.5" y="23.5"/>
         </view>
     </objects>
     <resources>
